<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="com.example.user.driveremergency.LoginController">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_sidenav_icon"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="75dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/desc"
            app:srcCompat="@drawable/mainlogo_red" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/desc"
                android:padding="5dp"
                android:src="@drawable/icon_name" />

            <EditText
                android:id="@+id/etext1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/states_rounded_corners"
                android:fontFamily="@font/alegreya_sans"
                android:gravity="left"
                android:hint="Name"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:textSize="18sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/desc"
                android:padding="5dp"
                android:src="@drawable/ic_lock_black_24dp" />

            <EditText
                android:id="@+id/etext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="@drawable/states_rounded_corners"
                android:fontFamily="@font/alegreya_sans"
                android:gravity="left |center_vertical"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:paddingTop="5dp"
                android:textSize="18sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/chk_pass"
            android:layout_width="168dp"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/average_sans"
            android:text="@string/save_password"
            android:textColor="#A39D9D"
            android:textColorHint="#A39D9D"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:contentDescription="@string/txt_sign_up"
                android:fontFamily="@font/average_sans"
                android:text="@string/signup_here"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/forgetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/txt_forget"
                android:fontFamily="@font/average_sans"
                android:text="@string/forget_password"
                android:textAllCaps="false"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>




